--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@vue/cli-plugin-eslint": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
     "@vue/compiler-sfc": "^3.0.0",
+    "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^5.2.1",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.55.0",
+    "sass-loader": "^10.3.1",
+    "vue-router": "^4.1.5"
   },
   "eslintConfig": {
     "root": true,
